[gd_scene load_steps=6 format=3 uid="uid://dssyfb3gecehd"]

[ext_resource type="Script" uid="uid://62hrqgkiy6l0" path="res://pause_menu.gd" id="2_nwcfo"]
[ext_resource type="Texture2D" uid="uid://d17t3gpbwke6a" path="res://assets/ui/home.png" id="3_05uyy"]
[ext_resource type="Texture2D" uid="uid://c86g6u1e6mtwq" path="res://assets/ui/play_button.png" id="3_d3xb4"]
[ext_resource type="Texture2D" uid="uid://dkpv83bt0lvg3" path="res://assets/ui/settings_button.png" id="4_mxa3g"]
[ext_resource type="Texture2D" uid="uid://cqoctmvoui3fv" path="res://assets/ui/exit_button.png" id="5_e8sti"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("2_nwcfo")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(0.5, 0.5, 0.5, 0.5)
texture = ExtResource("3_05uyy")
centered = false

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -20.0
offset_right = -76.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_group_ = true

[node name="ResumeButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_right = 164.0
offset_bottom = 36.0
icon = ExtResource("3_d3xb4")
icon_alignment = 1

[node name="SettingsButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 44.0
offset_right = 164.0
offset_bottom = 80.0
icon = ExtResource("4_mxa3g")
icon_alignment = 1

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 88.0
offset_right = 164.0
offset_bottom = 124.0
icon = ExtResource("5_e8sti")
icon_alignment = 1

[connection signal="pressed" from="Buttons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
